overflow fix, and maxWidth for apps

--- a/_css/main.less
+++ b/_css/main.less
@@ -244,6 +244,7 @@ html, body {
 	.container {
 		width:100%;
 		height:@devicesHeight - @progressBarHeight;
+		overflow:hidden;
 
 		ul {
 			padding:0px;
